# rosweld_tools_examples

./: CMakeLists.txt  package.xml
flexgui/: rosweld.fgproj  rosweld_final.fgproj  rosweld_tools.fgproj
flexgui/scripts/: cam-x.wmcam  cam-y.wmcam  chart.css  initScript.js  utils.js
launch/: core.launch  lab.launch  moveit.rviz  ppm_cameras.launch  simulation.launch  start.launch  welding_camera.launch
scripts/: pytest.sh  startup.sh  webserver.sh
