<?xml version="1.0"?>
<package format="2">
  <name>rosweld_tools_examples</name>
  <version>0.1.0</version>
  <description>rosweld_tools examples</description>
  <maintainer email="balint.tahi@ppm.no"></maintainer>
  <license>Apache 2.0</license>

  <url type="website"></url>
  <url type="repository"></url>
  <url type="bugtracker"></url>
  <author></author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_control_interface</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rosweld_tools</exec_depend>
  <exec_depend>rosweld_drivers</exec_depend>
  <exec_depend>trac_ik</exec_depend>
  <exec_depend>trac_ik_lib</exec_depend>
</package>
